iOS: Multipeer connectivity and collaborative mapping when a phone has connected

--- a/ios/RoBart/RoBart/Info.plist
+++ b/ios/RoBart/RoBart/Info.plist
@@ -15,5 +15,10 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSBonjourServices</key>
+	<array>
+		<string>_robart._tcp</string>
+		<string>_robart.udp</string>
+	</array>
 </dict>
 </plist>
