.gitignore: Ignoring data/

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 ###############################################################################
+# Program-generated Data
+###############################################################################
+
+data/
+
+
+###############################################################################
 # Python
 ###############################################################################
 
