iOS: Option to use SSL (wss:) and changed bundle identifier. Display name is now 'RoBart Teleop'.

--- a/ios/RoBart/RoBart/Info.plist
+++ b/ios/RoBart/RoBart/Info.plist
@@ -6,6 +6,13 @@
 	<dict>
 		<key>NSExceptionDomains</key>
 		<dict>
+			<key>192.168.0.100</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+			</dict>
 			<key>192.168.0.128</key>
 			<dict>
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
