Web app: Support for SSL certificates. Web page now auto-detects correct WebSocket URL to use.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,13 @@ data/
 
 
 ###############################################################################
+# Certificates
+###############################################################################
+
+*.pem
+
+
+###############################################################################
 # Python
 ###############################################################################
 
