turnserver configuration files for MacOS and Windows

--- a/turnserver_macos.conf
+++ b/turnserver_macos.conf
@@ -1,7 +1,7 @@
 #
 # turnserver.conf
 #
-# Sample CoTurn server configuration for Bart's home network.
+# Sample CoTurn server configuration for MacBook on Bart's home network.
 #
 
 # Network Settings
