iOS: Bonjour UDP to Info.plist just in case

--- a/ios/RoBart/RoBart/Info.plist
+++ b/ios/RoBart/RoBart/Info.plist
@@ -25,7 +25,7 @@
 	<key>NSBonjourServices</key>
 	<array>
 		<string>_robart._tcp</string>
-		<string>_robart.udp</string>
+		<string>_robart._udp</string>
 	</array>
 </dict>
 </plist>
