turnserver_macos.conf: Updated to use new IP

--- a/turnserver_macos.conf
+++ b/turnserver_macos.conf
@@ -6,18 +6,22 @@
 
 # Network Settings
 listening-port=3478
+
 # Bind to your local Mac IP
-listening-ip=0.0.0.0
+listening-ip=192.168.0.101
+
+# Relay
+relay-ip=192.168.0.101
+
 # Map public IP to local IP (Required for NAT)
-external-ip=71.92.165.74/192.168.0.128
+external-ip=71.92.165.74/192.168.0.101
 
 # Relay Port Range (Must match router port forwarding)
-# Only 16 ports (for 16 maximum concurrent sessions)
 min-port=40000
 max-port=40100
 
 # Authentication
-realm=71.92.165.74
+realm=bart_macbook_realm
 fingerprint
 lt-cred-mech
 
