Windows turnserver config file updates (but still not working outside of LAN)

--- a/turnserver_msys2.conf
+++ b/turnserver_msys2.conf
@@ -1,23 +1,32 @@
 #
-# turnserver_windows.conf
+# turnserver_msys2.conf
 #
 # Sample CoTurn server configuration for the Windows machine on Bart's home network.
 #
 
+# TLS certificate
+cert=fullchain.pem
+pkey=privkey.pem
+
 # Network Settings
 listening-port=3478
-# Bind to your local Mac IP
-listening-ip=0.0.0.0
+tls-listening-port=5349
+
+# Bind to your local IP
+listening-ip=192.168.0.100
+
+# Relay
+relay-ip=192.168.0.100
+
 # Map public IP to local IP (Required for NAT)
 external-ip=71.92.165.74/192.168.0.100
 
 # Relay Port Range (Must match router port forwarding)
-# Only 16 ports (for 16 maximum concurrent sessions)
-min-port=65000
-max-port=65015
+min-port=40000
+max-port=40100
 
 # Authentication
-realm=71.92.165.74
+realm=trzy.ddns.net
 fingerprint
 lt-cred-mech
 
